[package]
name = "gwt-sweep"
version = "0.1.2"
edition = "2024"
description = "Clean stale Git worktrees safely"
license = "MIT"
repository = "https://github.com/n01e0/gwt-sweep"
readme = "README.md"
keywords = ["git", "worktree", "cleanup", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
git2 = "0.21.0"
globset = "0.4.16"
indicatif = { version = "0.18.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.20.0"
